2011-01-04  Laszlo Gombos  <laszlo.1.gombos@nokia.com>

        Reviewed by Ariya Hidayat.

        [Qt][Symbian] Make sure that WebKit headers are included before platform headers on Symbian
        https://bugs.webkit.org/show_bug.cgi?id=31273

        On Symbian PREPEND_INCLUDEPATH is the best way to make sure that WebKit headers
        are included before platform headers. On all other platforms continue to use
        INCLUDEPATH (as before). This is a continuation of r65877.

        No new tests as there is no new functionality.

        * JavaScriptCore.pri:

2011-01-04  Darin Adler  <darin@apple.com>

        Try to fix Windows build.

        * wtf/ThreadingWin.cpp: Added include of PassOwnPtr.h. Fixed paragraphing
        of conditional includes.
        (WTF::wtfThreadEntryPoint): Use -> instead of . to dereference pointer.
        (WTF::createThreadInternal): Tweaked #if to not need separate macro.

2011-01-04  Daniel Bates  <dbates@rim.com>

        Reviewed by Adam Roben.

        Extract ThreadFunctionInvocation into separate file and share between Apple Windows and Android
        https://bugs.webkit.org/show_bug.cgi?id=51855

        Both the Apple Windows and Android ports implement a similar adapter structure,
        called ThreadFunctionInvocation and ThreadData respectively, as part of
        their thread creation process. Instead, we should share such an adapter
        structure and remove duplicate code.

        * JavaScriptCore.gypi: Added header wtf/ThreadFunctionInvocation.h.
        * wtf/ThreadFunctionInvocation.h: Added.
        (WTF::ThreadFunctionInvocation::ThreadFunctionInvocation):
        * wtf/ThreadingPthreads.cpp: Removed Android-specific structure ThreadData; Instead, use ThreadFunctionInvocation.
        (WTF::runThreadWithRegistration):
        (WTF::createThreadInternal): 
        * wtf/ThreadingWin.cpp: Moved structure ThreadFunctionInvocation to its own file so that